// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Dashboard V3 snapshots (token consistency) DashboardV3Client happy state matches snapshot (token-based layout) 1`] = `
<div>
  <div
    class="min-h-full bg-[var(--page-bg)] px-[var(--space-page-x)] py-[var(--space-page-y)] space-y-2"
  >
    <div
      class="flex flex-col gap-4 mx-auto max-w-[1600px]"
    >
      <header
        class="flex flex-col gap-3"
      >
        <div
          class="flex flex-col gap-3 md:flex-row md:items-start md:justify-between"
        >
          <div
            class="min-w-0 space-y-1"
          >
            <div
              class="text-[28px] font-semibold leading-tight text-[var(--text)]"
            >
              <h1
                class="text-[24px] font-semibold leading-tight text-[var(--text)]"
              >
                Dashboard
              </h1>
            </div>
          </div>
        </div>
      </header>
      <div
        class="grid grid-cols-1 gap-3 xl:grid-cols-5"
      >
        <a
          class="block rounded-[var(--radius-card)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)]"
          href="/inventory"
        >
          <section
            class="rounded-[var(--radius-card)] border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow-card)] h-full min-h-[148px]"
          >
            <div
              class="mb-4 flex items-start justify-between gap-3"
            >
              <div
                class="min-w-0 space-y-1"
              >
                <h3
                  class="text-base font-semibold text-[var(--text)]"
                >
                  Inventory
                </h3>
              </div>
            </div>
            <div
              data-state="default"
            >
              <div
                class="space-y-2"
              >
                <div
                  class="text-[40px] font-bold leading-none tabular-nums text-[var(--text)]"
                >
                  42
                </div>
                <div
                  class="text-sm text-[var(--muted-text)]"
                >
                  +7 listed
                </div>
              </div>
            </div>
          </section>
        </a>
        <a
          class="block rounded-[var(--radius-card)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)]"
          href="/deals"
        >
          <section
            class="rounded-[var(--radius-card)] border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow-card)] h-full min-h-[148px]"
          >
            <div
              class="mb-4 flex items-start justify-between gap-3"
            >
              <div
                class="min-w-0 space-y-1"
              >
                <h3
                  class="text-base font-semibold text-[var(--text)]"
                >
                  Active Deals
                </h3>
              </div>
            </div>
            <div
              data-state="default"
            >
              <div
                class="space-y-2"
              >
                <div
                  class="text-[40px] font-bold leading-none tabular-nums text-[var(--text)]"
                >
                  5
                </div>
              </div>
            </div>
          </section>
        </a>
        <a
          class="block rounded-[var(--radius-card)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)]"
          href="/crm/opportunities"
        >
          <section
            class="rounded-[var(--radius-card)] border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow-card)] h-full min-h-[148px]"
          >
            <div
              class="mb-4 flex items-start justify-between gap-3"
            >
              <div
                class="min-w-0 space-y-1"
              >
                <h3
                  class="text-base font-semibold text-[var(--text)]"
                >
                  New Leads
                </h3>
              </div>
            </div>
            <div
              data-state="default"
            >
              <div
                class="space-y-2"
              >
                <div
                  class="text-[40px] font-bold leading-none tabular-nums text-[var(--text)]"
                >
                  10
                </div>
              </div>
            </div>
          </section>
        </a>
        <a
          class="block rounded-[var(--radius-card)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)]"
          href="/lenders"
        >
          <section
            class="rounded-[var(--radius-card)] border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow-card)] h-full min-h-[148px]"
          >
            <div
              class="mb-4 flex items-start justify-between gap-3"
            >
              <div
                class="min-w-0 space-y-1"
              >
                <h3
                  class="text-base font-semibold text-[var(--text)]"
                >
                  Gross Profit
                </h3>
              </div>
            </div>
            <div
              data-state="default"
            >
              <div
                class="space-y-2"
              >
                <div
                  class="text-[40px] font-bold leading-none tabular-nums text-[var(--text)]"
                >
                  0
                </div>
              </div>
            </div>
          </section>
        </a>
        <section
          class="rounded-[var(--radius-card)] border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow-card)] h-full min-h-[148px]"
        >
          <div
            class="mb-4 flex items-start justify-between gap-3"
          >
            <div
              class="min-w-0 space-y-1"
            >
              <h3
                class="text-base font-semibold text-[var(--text)]"
              >
                Health / Ops Score
              </h3>
            </div>
          </div>
          <div
            data-state="default"
          >
            <div
              class="space-y-2"
            >
              <div
                class="text-[40px] font-bold leading-none tabular-nums text-[var(--text)]"
              >
                91%
              </div>
              <div
                class="text-sm text-[var(--muted-text)]"
              >
                2 unresolved
              </div>
            </div>
          </div>
        </section>
      </div>
      <div
        class="grid grid-cols-1 gap-3 xl:grid-cols-12"
      >
        <div
          class="xl:col-span-8"
        >
          <section
            class="rounded-[var(--radius-card)] border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow-card)] h-full"
          >
            <div
              class="mb-4 flex items-start justify-between gap-3"
            >
              <div
                class="min-w-0 space-y-1"
              >
                <h3
                  class="text-base font-semibold text-[var(--text)]"
                >
                  Quick Actions
                </h3>
              </div>
            </div>
            <div
              data-state="default"
            >
              <div
                class="space-y-4"
              >
                <div
                  class="grid grid-cols-1 gap-2 sm:grid-cols-3"
                />
                <p
                  class="text-sm text-[var(--muted-text)]"
                >
                  No actions available.
                </p>
                <div
                  class="overflow-hidden rounded-[var(--radius-card)] border border-[var(--border)] bg-[var(--surface-2)]"
                >
                  <div
                    class="flex flex-wrap items-center justify-between gap-3 border-b border-[var(--border)] px-4 py-3"
                  >
                    <div
                      class="flex min-w-0 flex-1 items-center gap-3"
                    >
                      <div
                        class="w-full"
                      >
                        <input
                          aria-label="Search inventory workbench"
                          class="flex h-9 w-full rounded-md border border-[var(--border)] bg-[var(--panel)] px-3 py-1 text-sm shadow-sm transition-colors placeholder:text-[var(--text-soft)] focus-visible:outline focus-visible:ring-2 focus-visible:ring-[var(--accent)] focus-visible:ring-offset-0 disabled:cursor-not-allowed disabled:opacity-50 h-9 bg-[var(--surface)]"
                          placeholder="Search inventory"
                          value=""
                        />
                      </div>
                      <div
                        class="w-[170px]"
                      >
                        <div
                          class="w-full"
                        >
                          <select
                            aria-label="Filter inventory status"
                            class="flex h-9 w-full rounded-md border border-[var(--border)] bg-[var(--panel)] px-3 py-1 text-sm shadow-sm focus-visible:outline focus-visible:ring-2 focus-visible:ring-[var(--accent)] focus-visible:ring-offset-0 disabled:cursor-not-allowed disabled:opacity-50 "
                          >
                            <option
                              value=""
                            >
                              All Status
                            </option>
                            <option
                              value="AVAILABLE"
                            >
                              Available
                            </option>
                            <option
                              value="REPAIR"
                            >
                              Repair
                            </option>
                            <option
                              value="HOLD"
                            >
                              Hold
                            </option>
                            <option
                              value="WHOLESALE"
                            >
                              Wholesale
                            </option>
                          </select>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="overflow-x-auto"
                  >
                    <div
                      class="w-full overflow-auto"
                    >
                      <table
                        class="w-full caption-bottom text-sm "
                      >
                        <thead>
                          <tr
                            class="border-b border-[var(--border)] transition-colors hover:bg-[var(--muted)]/50 "
                          >
                            <th
                              class="h-10 px-4 text-left align-middle font-medium text-[var(--text-soft)] "
                            >
                              <span
                                class="h-10 px-4 text-left align-middle text-sm font-medium text-[var(--text-soft)]"
                              >
                                Stock
                              </span>
                            </th>
                            <th
                              class="h-10 px-4 text-left align-middle font-medium text-[var(--text-soft)] "
                            >
                              <span
                                class="h-10 px-4 text-left align-middle text-sm font-medium text-[var(--text-soft)]"
                              >
                                Vehicle
                              </span>
                            </th>
                            <th
                              class="h-10 px-4 text-left align-middle font-medium text-[var(--text-soft)] "
                            >
                              <span
                                class="h-10 px-4 text-left align-middle text-sm font-medium text-[var(--text-soft)]"
                              >
                                Cost
                              </span>
                            </th>
                            <th
                              class="h-10 px-4 text-left align-middle font-medium text-[var(--text-soft)] "
                            >
                              <span
                                class="h-10 px-4 text-left align-middle text-sm font-medium text-[var(--text-soft)]"
                              >
                                Price
                              </span>
                            </th>
                            <th
                              class="h-10 px-4 text-left align-middle font-medium text-[var(--text-soft)] "
                            >
                              <span
                                class="h-10 px-4 text-left align-middle text-sm font-medium text-[var(--text-soft)]"
                              >
                                Profit
                              </span>
                            </th>
                            <th
                              class="h-10 px-4 text-left align-middle font-medium text-[var(--text-soft)] "
                            >
                              <span
                                class="h-10 px-4 text-left align-middle text-sm font-medium text-[var(--text-soft)]"
                              >
                                Days
                              </span>
                            </th>
                            <th
                              class="h-10 px-4 text-left align-middle font-medium text-[var(--text-soft)] "
                            >
                              <span
                                class="h-10 px-4 text-left align-middle text-sm font-medium text-[var(--text-soft)]"
                              >
                                Status
                              </span>
                            </th>
                          </tr>
                        </thead>
                        <tbody>
                          <tr
                            class="border-b border-[var(--border)] transition-colors hover:bg-[var(--muted)]/50 "
                          >
                            <td
                              class="p-4 align-middle text-center text-sm text-[var(--muted-text)]"
                              colspan="7"
                            >
                              No matching inventory records.
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          class="xl:col-span-4"
        >
          <section
            class="rounded-[var(--radius-card)] border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow-card)] h-full"
          >
            <div
              class="mb-4 flex items-start justify-between gap-3"
            >
              <div
                class="min-w-0 space-y-1"
              >
                <h3
                  class="text-base font-semibold text-[var(--text)]"
                >
                  Deal Pipeline
                </h3>
              </div>
            </div>
            <div
              data-state="default"
            >
              <div
                class="space-y-3"
              >
                <div
                  class="grid grid-cols-2 gap-2 xl:grid-cols-5"
                >
                  <section
                    class="rounded-[12px] border border-[var(--border)] bg-[var(--surface-2)] p-2"
                  >
                    <p
                      class="text-xs font-semibold uppercase tracking-wide text-[var(--muted-text)]"
                    >
                      New
                    </p>
                    <div
                      class="mt-2 rounded-[10px] border border-[var(--border)] bg-[var(--surface)] p-2"
                    >
                      <p
                        class="truncate text-xs font-medium text-[var(--text)]"
                      >
                        Pending deals
                      </p>
                      <p
                        class="mt-1 text-lg font-semibold tabular-nums text-[var(--text)]"
                      >
                        2
                      </p>
                    </div>
                  </section>
                  <section
                    class="rounded-[12px] border border-[var(--border)] bg-[var(--surface-2)] p-2"
                  >
                    <p
                      class="text-xs font-semibold uppercase tracking-wide text-[var(--muted-text)]"
                    >
                      Contacted
                    </p>
                    <div
                      class="mt-2 rounded-[10px] border border-[var(--border)] bg-[var(--surface)] p-2"
                    >
                      <p
                        class="truncate text-xs font-medium text-[var(--text)]"
                      >
                        Funding issues
                      </p>
                      <p
                        class="mt-1 text-lg font-semibold tabular-nums text-[var(--text)]"
                      >
                        0
                      </p>
                    </div>
                  </section>
                  <section
                    class="rounded-[12px] border border-[var(--border)] bg-[var(--surface-2)] p-2"
                  >
                    <p
                      class="text-xs font-semibold uppercase tracking-wide text-[var(--muted-text)]"
                    >
                      Negotiating
                    </p>
                    <div
                      class="mt-2 rounded-[10px] border border-dashed border-[var(--border)] bg-[var(--surface)] p-2"
                    >
                      <p
                        class="text-xs text-[var(--muted-text)]"
                      >
                        No deals
                      </p>
                    </div>
                  </section>
                  <section
                    class="rounded-[12px] border border-[var(--border)] bg-[var(--surface-2)] p-2"
                  >
                    <p
                      class="text-xs font-semibold uppercase tracking-wide text-[var(--muted-text)]"
                    >
                      Approved
                    </p>
                    <div
                      class="mt-2 rounded-[10px] border border-dashed border-[var(--border)] bg-[var(--surface)] p-2"
                    >
                      <p
                        class="text-xs text-[var(--muted-text)]"
                      >
                        No deals
                      </p>
                    </div>
                  </section>
                  <section
                    class="rounded-[12px] border border-[var(--border)] bg-[var(--surface-2)] p-2"
                  >
                    <p
                      class="text-xs font-semibold uppercase tracking-wide text-[var(--muted-text)]"
                    >
                      Won
                    </p>
                    <div
                      class="mt-2 rounded-[10px] border border-dashed border-[var(--border)] bg-[var(--surface)] p-2"
                    >
                      <p
                        class="text-xs text-[var(--muted-text)]"
                      >
                        No deals
                      </p>
                    </div>
                  </section>
                </div>
              </div>
            </div>
          </section>
        </div>
      </div>
      <div
        class="grid grid-cols-1 gap-3 xl:grid-cols-12"
      >
        <div
          class="xl:col-span-5"
        >
          <section
            class="rounded-[var(--radius-card)] border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow-card)] h-full"
          >
            <div
              class="mb-4 flex items-start justify-between gap-3"
            >
              <div
                class="min-w-0 space-y-1"
              >
                <h3
                  class="text-base font-semibold text-[var(--text)]"
                >
                  Inventory
                </h3>
              </div>
            </div>
            <div
              data-state="default"
            >
              <div
                class="grid grid-cols-1 gap-3 sm:grid-cols-2"
              >
                <a
                  class="rounded-[12px] border border-[var(--border)] bg-[var(--surface-2)] p-3 transition-colors hover:bg-[var(--surface)]"
                  href="/inventory"
                >
                  <div
                    class="flex items-center justify-between gap-2"
                  >
                    <p
                      class="truncate text-sm font-medium text-[var(--text)]"
                    >
                      Cars in recon
                    </p>
                    <span
                      class="inline-flex items-center rounded-full px-2 py-0.5 text-xs font-medium bg-[var(--warning-muted)] text-[var(--warning-muted-fg)]"
                    >
                      warning
                    </span>
                  </div>
                  <p
                    class="mt-2 text-xl font-semibold tabular-nums text-[var(--text)]"
                  >
                    1
                  </p>
                </a>
              </div>
            </div>
          </section>
        </div>
        <div
          class="space-y-3 xl:col-span-4"
        >
          <section
            class="rounded-[var(--radius-card)] border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow-card)] h-full"
          >
            <div
              class="mb-4 flex items-start justify-between gap-3"
            >
              <div
                class="min-w-0 space-y-1"
              >
                <h3
                  class="text-base font-semibold text-[var(--text)]"
                >
                  Messaging
                </h3>
              </div>
            </div>
            <div
              data-state="default"
            >
              <p
                class="text-sm text-[var(--text-soft)]"
              >
                No upcoming appointments.
              </p>
            </div>
          </section>
          <section
            class="rounded-[var(--radius-card)] border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow-card)] h-full"
          >
            <div
              class="mb-4 flex items-start justify-between gap-3"
            >
              <div
                class="min-w-0 space-y-1"
              >
                <h3
                  class="text-base font-semibold text-[var(--text)]"
                >
                  Acquisition
                </h3>
              </div>
            </div>
            <div
              data-state="default"
            >
              <div
                class="rounded-[var(--radius-card)] border border-[var(--border)] bg-[var(--surface)] p-6 text-center"
              >
                <h3
                  class="text-base font-semibold text-[var(--text)]"
                >
                  No acquisition signals
                </h3>
                <p
                  class="mt-1 text-sm text-[var(--muted-text)]"
                >
                  Appraisal opportunities and acquisition insights will appear here.
                </p>
              </div>
            </div>
          </section>
        </div>
        <div
          class="space-y-3 xl:col-span-3"
        >
          <section
            class="rounded-[var(--radius-card)] border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow-card)] h-full"
          >
            <div
              class="mb-4 flex items-start justify-between gap-3"
            >
              <div
                class="min-w-0 space-y-1"
              >
                <h3
                  class="text-base font-semibold text-[var(--text)]"
                >
                  Activity
                </h3>
              </div>
            </div>
            <div
              data-state="default"
            >
              <ul
                class="space-y-2"
              >
                <li>
                  <a
                    class="flex items-center justify-between gap-3 rounded-[12px] border border-[var(--border)] bg-[var(--surface-2)] px-3 py-2 hover:bg-[var(--surface)]"
                    href="/deals"
                  >
                    <span
                      class="truncate text-sm text-[var(--text)]"
                    >
                      Pending deals
                    </span>
                    <span
                      class="shrink-0 text-xs tabular-nums text-[var(--muted-text)]"
                    >
                      2
                    </span>
                  </a>
                </li>
                <li>
                  <a
                    class="flex items-center justify-between gap-3 rounded-[12px] border border-[var(--border)] bg-[var(--surface-2)] px-3 py-2 hover:bg-[var(--surface)]"
                    href="/deals"
                  >
                    <span
                      class="truncate text-sm text-[var(--text)]"
                    >
                      Funding issues
                    </span>
                    <span
                      class="shrink-0 text-xs tabular-nums text-[var(--muted-text)]"
                    >
                      0
                    </span>
                  </a>
                </li>
              </ul>
            </div>
          </section>
          <section
            class="rounded-[var(--radius-card)] border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow-card)] h-full"
          >
            <div
              class="mb-4 flex items-start justify-between gap-3"
            >
              <div
                class="min-w-0 space-y-1"
              >
                <h3
                  class="text-base font-semibold text-[var(--text)]"
                >
                  Tasks
                </h3>
              </div>
            </div>
            <div
              data-state="default"
            >
              <ul
                class="space-y-2"
              >
                <li>
                  <a
                    class="block"
                    href="/crm/opportunities"
                  >
                    <div
                      class="rounded-[12px] border border-[var(--border)] bg-[var(--surface-2)] px-3 py-2 min-h-[44px] text-sm flex items-center justify-between gap-3"
                    >
                      <div
                        class="min-w-0 space-y-1"
                      >
                        <p
                          class="truncate text-sm font-medium text-[var(--text)]"
                        >
                          New Prospects
                        </p>
                        <p
                          class="line-clamp-1 text-xs text-[var(--muted-text)]"
                        >
                          3 total
                        </p>
                      </div>
                      <div
                        class="flex shrink-0 items-center gap-2"
                      >
                        <span
                          class="text-xs font-semibold tabular-nums text-[var(--text)]"
                        >
                          3
                        </span>
                        <span
                          class="inline-flex items-center rounded-full px-2 py-0.5 text-xs font-medium capitalize bg-[var(--info-muted)] text-[var(--info-muted-fg)]"
                        >
                          info
                        </span>
                      </div>
                    </div>
                  </a>
                </li>
                <li>
                  <a
                    class="block"
                    href="/customers"
                  >
                    <div
                      class="rounded-[12px] border border-[var(--border)] bg-[var(--surface-2)] px-3 py-2 min-h-[44px] text-sm flex items-center justify-between gap-3"
                    >
                      <div
                        class="min-w-0 space-y-1"
                      >
                        <p
                          class="truncate text-sm font-medium text-[var(--text)]"
                        >
                          Follow-ups
                        </p>
                        <p
                          class="line-clamp-1 text-xs text-[var(--muted-text)]"
                        >
                          2 total
                        </p>
                      </div>
                      <div
                        class="flex shrink-0 items-center gap-2"
                      >
                        <span
                          class="text-xs font-semibold tabular-nums text-[var(--text)]"
                        >
                          2
                        </span>
                        <span
                          class="inline-flex items-center rounded-full px-2 py-0.5 text-xs font-medium capitalize bg-[var(--info-muted)] text-[var(--info-muted-fg)]"
                        >
                          info
                        </span>
                      </div>
                    </div>
                  </a>
                </li>
              </ul>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-label="Notifications (F8)"
    role="region"
    style="pointer-events: none;"
    tabindex="-1"
  >
    <ol
      aria-label="Notifications (F8)"
      class="fixed bottom-4 left-4 right-4 z-[100] flex max-h-screen flex-col-reverse gap-2 p-0 sm:left-auto sm:right-4 sm:max-w-[420px]"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`Dashboard V3 snapshots (token consistency) MetricCard matches snapshot (uses token classes) 1`] = `
<a
  class="block rounded-[var(--radius-card)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)]"
  href="/inventory"
>
  <section
    class="rounded-[var(--radius-card)] border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow-card)] h-full"
  >
    <div
      class="mb-4 flex items-start justify-between gap-3"
    >
      <div
        class="min-w-0 space-y-1"
      >
        <h3
          class="text-base font-semibold text-[var(--text)]"
        >
          Inventory
        </h3>
      </div>
    </div>
    <div
      data-state="default"
    >
      <div
        class="space-y-2"
      >
        <div
          class="text-[40px] font-bold leading-none tabular-nums text-[var(--text)]"
        >
          182
        </div>
        <div
          class="text-sm text-[var(--muted-text)]"
        >
          +12 listed
        </div>
      </div>
    </div>
  </section>
</a>
`;

exports[`Dashboard V3 snapshots (token consistency) WidgetCard with rows matches snapshot (uses token classes) 1`] = `
<section
  class="rounded-[var(--radius-card)] border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow-card)] h-full"
>
  <div
    class="mb-4 flex items-start justify-between gap-3"
  >
    <div
      class="min-w-0 space-y-1"
    >
      <h3
        class="text-base font-semibold text-[var(--text)]"
      >
        Customer Tasks
      </h3>
    </div>
  </div>
  <div
    data-state="default"
  >
    <ul>
      <li>
        Row one
      </li>
      <li>
        Row two
      </li>
    </ul>
  </div>
</section>
`;
